--- a/style/style.css
+++ b/style/style.css
@@ -8,4 +8,6 @@ body{
     justify-content: center;
     text-align: center;
     align-items: center;
+    margin: 0px;
+    flex-direction: column;
 }
