--- a/style/style.css
+++ b/style/style.css
@@ -1,13 +1,123 @@
 *{
-    top:0px;
-    left:0px;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
-body{
+
+html{
+    font-size: 12px;
+    font-weight: 600;
+}
+
+img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+section{
+    min-height: 100vh;
+    width: 100%;
     display: flex;
-    justify-content: center;
-    text-align: center;
     align-items: center;
-    margin: 0px;
-    flex-direction: column;
+    justify-content: center;
+    padding: 100px 0;
+    background-color: rgba(73, 8, 8, 0.534);
+}
+
+.container{
+    width: 90%;
+    height: auto;
+    max-width: 1200px;
+    margin: 0 auto;
+
+
+}
+.brand{
+    text-align: center;
+    font-size: 4rem;
+    color: whitesmoke;
+    margin-bottom: 30px;
+}
+
+form{
+    width: 90%;
+    max-width: 400px;
+    border-radius: 4px;
+    margin: 20px auto;
+    background-color: aliceblue;
+}
+
+form input{
+    width: 90%;
+    background-color: transparent;
+    padding: 10px;
+    border: none;
+    outline: none;
+    font-size: 2rem;
+    display: inline-block;
+}
+
+form ion-icon{
+    width: 9%;
+    font-size: 3rem;
+    margin: -9px;
+    color: grey;
+
+}
+
+.result{
+    margin-top: 50px;
+    width: 100%;
+    display: grid;
+    grid-gap: 25px;
+    grid-template: auto / repeat(auto-fit, minmax(300px, 1fr));
+}
+
+.item{
+    width: 100%;
+    border-radius: 8px;
+    background-color: lightgray;
+    padding: 15px;
+    overflow: hidden;
+
+}
+
+.item img{
+    width: 100%;
+    height: 300px;
+    border-radius: 4px;
+}
+
+.item .flex-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.item .title{
+    color: rgb(0, 0, 0);
+    margin: 20px 10px 0 0;
+    font-size: 1.8rem;
+    font-weight: 400;
+}
+
+.view-button{
+    text-decoration: none;
+    text-align: center;
+    width: 130px;
+    padding: 10px 0;
+    background-color: grey;
+    color: whitesmoke;
+    font-size: 1.4rem;
+    margin-top: 20px;
+    align-self: flex-start;
+}
+.infos{
+    color: rgb(39, 33, 33);
+    display: block;
+    margin-top: 10px;
+    font-size: 1.4rem;
+    letter-spacing: .05rem;
+    line-height: 2rem;
 }
