--- a/style/style.css
+++ b/style/style.css
@@ -80,6 +80,8 @@ form ion-icon{
     background-color: lightgray;
     padding: 15px;
     overflow: hidden;
+    box-shadow: 3px 2px 8px 2px rgba(0, 0, 0, 0.5);
+
 
 }
 
